# Risk-CTF

./: .gitignore  AGENTS.md  README.md  Risk-CTF specifications.txt  pyproject.toml
deploy/: monitor.service.example  mothership.service.example  setup_monitor.ps1  setup_monitor.sh  setup_mothership.ps1  setup_mothership.sh  start_monitor.ps1  start_monitor.sh  start_mothership.ps1  start_mothership.sh
src/risk_ctf/: __init__.py
src/risk_ctf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/risk_ctf/common/: __init__.py  auth.py  contracts.py  schema.py
src/risk_ctf/monitor/: __init__.py  __main__.py  agent.py  client.py  collector.py
src/risk_ctf/mothership/: __init__.py  __main__.py  ledger.py  server.py  world_map.py
tests/: test_auth.py  test_collector.py  test_dashboard_render.py  test_flow.py  test_ledger.py  test_ledger_phase2.py  test_schema.py  test_schema_phase2.py  test_tools_gen_dev_certs.py  test_world_map.py
tools/: gen_dev_certs.py  seed_demo_ledger.py
