[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-ctf"
version = "0.2.1"
description = "Risk-CTF: Monitor agent and Mothership server (TLS/HMAC API, world-map dashboard, Phase 2 events). Includes deploy setup scripts and tools/gen_dev_certs.py for dev TLS."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Risk-CTF Team" }]
keywords = [
    "security",
    "monitoring",
    "agent",
    "ctf",
    "dashboard",
    "hmac",
    "tls",
    "sqlite",
    "event-ingest",
    "integrity",
    "threat-hunting",
    "dev-environment",
    "setup-script",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
# Runtime: Python standard library only (http.server, ssl, sqlite3, urllib, etc.).
# Phase 2 adds more event types and dashboard features without new runtime deps.
# Optional [project.optional-dependencies] dev: cryptography for tools/gen_dev_certs.py
# and automated setup scripts (deploy/setup_*.ps1, deploy/setup_*.sh).
dependencies = []

[project.optional-dependencies]
# Not imported by `risk_ctf` at runtime. Used by tools/gen_dev_certs.py and the
# deploy/setup_* scripts when OpenSSL is unavailable (see README).
dev = ["cryptography>=42.0.0"]

[project.scripts]
risk-ctf-monitor = "risk_ctf.monitor.__main__:main"
risk-ctf-mothership = "risk_ctf.mothership.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
